# crag-engine

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
apps/console/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
apps/console/e2e/: boot-daemon.mjs  empty.spec.ts  global-setup.mjs  helpers.ts  routes.spec.ts
apps/console/src/: main.tsx  root.tsx  router.tsx  theme.css
apps/cron/: auto-clear-fp-patterns.py
apps/daemon/: aggregates.py  engine_daemon.py  requirements.txt  session_lifecycle.py  transcript_tokens.py
apps/daemon/tests/: test_a3c1_grounding_pipeline.py  test_aggregates.py  test_anchor_cli.py  test_c2c3d_surface.py  test_closed_loop_hardening.py  test_console_endpoints.py  test_disposition_engine.py  test_engine_paths.py  test_graph_v2.py  test_grounding_autoresolve.py  test_grounding_llm_config.py  test_grounding_transient_llm.py  test_grounding_v2.py  test_grounding_v3_rev3.py  test_module_discovery.py  test_principles_export_drain.py  test_session_lifecycle.py  test_session_state.py  (+3 more)
apps/mcp/: mcp-server.py  requirements.txt
crag_anchor/: __init__.py  cli.py  daemon.py  mcp.py
crag_engine/: __init__.py  cli.py  daemon.py  mcp.py
db/: broadcaster.py  capabilities.py  claim_contradiction.py  claim_layer.py  claim_verify.py  contradiction.py  disposition.py  embed.py  engine-cli.py  engine_paths.py  entity_extract.py  entity_normalize.py  grounding_author.py  grounding_config.py  grounding_cost.py  grounding_queue_v2.py  grounding_resolve.py  lifecycle.py  llm_client.py  requirements.txt  schema.sql  scoring.py  stack.toml  sync_path_guard.py  write_gate.py
db/capture/: __init__.py  config.py  emit.py  emit_event.py  extractor.py  ports.py  run_capture.py  state.py
db/migrations/: 003_phase1_foundations.sql  004_phase2_embeddings.sql  005_phase4_lifecycle.sql  006_phase6_semantic_recall.sql  007_phase7_entity_linking.sql  008_phase8_task_clusters.sql  009_phase9_contradictions.sql  010_phase10_subscriptions.sql  011_token_ledger_cache_split.sql  012_session_meta.sql  013_supersede_arena.sql  014_recall_filter_telemetry.sql  015_phase17_session_benchmarks.sql  016_phase16e_insight_roles.sql  017_phase1_provenance_other_tables.sql  018_phase1_recall_provenance.sql  019_phase4_recall_feedback.sql  020_phase7_operator_audit.sql  021_phase8_staging_tier.sql  022_token_ledger_role_upsert.sql  023_phase25_grounded_memory.sql  024_ws4_recall_timings.sql  025_timestamp_format_normalization.sql  026_grounding_v2.sql  027_graph_v2.sql  028_grounding_autoresolve.sql  029_session_state.sql  030_grounding_llm_cost.sql  031_grounding_v3_claim_layer.sql  032_grounding_v3_rev3.sql  033_disposition_engine.sql  034_embedding_model_version.sql
db/tests/: test_capture.py  test_claim_classification_quality.py  test_claim_contradiction.py  test_write_gate.py
docs/: architecture.md  embedding.md
ee/: LICENSE  README.md
packaging/: README.md
packaging/docker/: Dockerfile.daemon  docker-compose.yml
packaging/launchd/: sh.crag.anchor.plist  sh.crag.engine.plist
packaging/systemd/: crag-anchor.service  crag-engine.service
scripts/: test-timestamp-convention.py
(+23 files in other folders)
